# socha-client-2022

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  ideas.md  readme.md
.cargo/: config.toml
.github/workflows/: build.yml
client/: Cargo.toml  start.sh
client/shell_scripts/: start.bat  start.sh
client/src/: bridge.rs  client.rs  game.rs  game_result.rs  lib.rs  main.rs  team.rs  utils.rs  xml_node.rs
client/src/algorithms/: algorithm.rs  crates_mcts.rs  mcts.rs  minmax.rs  mod.rs  parallel_minmax.rs  random_pick.rs  random_pick_delay.rs
client/src/algorithms/heuristics/: evaluation_functions.rs  mod.rs
client/src/game/: bitboard.rs  board.rs  fen.rs  game_move.rs  gamestate.rs  mod.rs  move_generation.rs  piece.rs  piece_type.rs  short_form.rs  team.rs  traits.rs  zobrist.rs
client/src/tables/: mod.rs  move_map.rs
game_algorithms/: Cargo.toml
game_algorithms/src/: algorithms.rs  lib.rs  mcts.rs  min_max.rs  traits.rs
game_lib/: Cargo.toml  regex.reg
game_lib/src/: board.rs  fen.rs  game_move.rs  gamestate.rs  lib.rs  min_max.rs  move_generation.rs  piece.rs  score.rs  team.rs
gym/: Cargo.toml
gym/src/: main.rs  player.rs  server.rs
mcts_client/: Cargo.toml  client_1.txt
mcts_client/src/: main.rs
min_max_client/: Cargo.toml
min_max_client/.cargo/: config.toml
min_max_client/src/: main.rs
perft/: Cargo.toml
perft/.cargo/: config.toml
perft/src/: main.rs  slow_perft.rs
testing/: Cargo.toml
util/: Cargo.toml
util/src/: bitboard.rs  fen.rs  lib.rs
