[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_xoshiro = "0.6.0"
rand = "0.8.4"
xml-rs = "0.8"
log = "0.4.14"
env_logger = "0.9.0"
game_lib = {path = "../game_lib" }
util = {path = "../util" }
clap = { version = "3.1.0", features = ["derive"] }

[profile.dev]
opt-level = 3
overflow-checks = false