[package]
name = "client"
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
codegen-units = 1
opt-level = 3
lto = true

[dependencies]
socha-client-2022 = { git = "https://github.com/team-omnicore/socha-client-rust-2022.git", branch = "main" }
clap = { version = "3.1.0", features = ["derive"] }
rand = "0.8"
thincollections = "0.5.0"
num-traits = "0.2.14"
regex = "1.5.5"
lazy_static = "1.4.0"
rand_xoshiro = "0.6.0"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
separator = "0.3.1"

[features]
straight_board = [] #Enabling this uses the move table for a straight board instead. Doesn't work yet.