[package]
name = "mcts_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = {path = "../client" }
game_algorithms = {path = "../game_algorithms" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
overflow-checks = false
lto = true