[package]
name = "min_max_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
codegen-units = 8
overflow-checks = false
lto = false

[dependencies]
client = {path = "../client" }
game_algorithms = {path = "../game_algorithms" }

[profile.release]
opt-level = 3
codegen-units = 1
overflow-checks = false
lto = true