[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socha-client-2022 = { git = "https://github.com/team-omnicore/socha-client-rust-2022.git", branch = "main" }
client = {path="../client"}
rand = "0.8"